{
    "name": "GameInput",
    "maps": [
        {
            "name": "Game",
            "id": "6ffff349-ecac-4aeb-ba37-7ccdf2f9cc7b",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3bf9c301-9538-4462-b37d-237c9f7732bb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlatformAction",
                    "type": "Button",
                    "id": "35b08ae8-1538-426a-921d-e89be4b96eef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "ce63e40f-b02a-45ce-8de7-1a85f48f6604",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d99eb74d-b57a-4eb8-9202-76cde98cd6a2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "083ccc61-ebfa-4f87-94c1-d83c59cd296d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlatformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b2055fe-ef18-468f-a11d-d4536c951dac",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}